--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,2 +1,21 @@
-- name: Metrics embed
-  uses: lowlighter/metrics@v3.34
+name: Metrics
+ Check failure on line 1 in .github/workflows/metrics.yml
+
+GitHub Actions
+/ github-metrics
+.github/workflows/metrics.yml#L1
+This run was manually canceled.
+on:
+  schedule: [{cron: "0 0 * * *"}]
+  push: {branches: ["master", "main"]}
+jobs:
+  github-metrics:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
